--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ mod_version=1.0.0
 mod_group_id=com.freefish.rosmontislib
 mod_authors=FreeFish
 mod_description=Temp
+
+authToken=jp_s7i1mdt156ga9a2dpsolo2ap65
