--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,14 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         maven {
             name = 'MinecraftForge'
             url = 'https://maven.minecraftforge.net/'
         }
         maven { url = 'https://maven.parchmentmc.org' }
         maven { url = 'https://repo.spongepowered.org/maven' }
+        mavenCentral()
+        gradlePluginPortal()
+        jcenter()
     }
 }
 
